--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,7 @@ set(CMAKE_C_STANDARD 11)
 
 add_compile_options(-pedantic -Wall -Wextra)
 add_library(cheri_compressed_cap cheri_compressed_cap.c cheri_compressed_cap.h)
+
+add_executable(decompress_c128_cap decompress_c128_cap.c)
+include(GNUInstallDirs)
+install(TARGETS decompress_c128_cap RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
