--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(cheri_compressed_cap C CXX)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 14)
 
-add_compile_options(-pedantic -Wall -Wextra -Weverything -Wno-old-style-cast -Wno-c++98-compat-pedantic -Wno-c++98-c++11-compat-binary-literal)
+add_compile_options(-pedantic -Wall -Wextra -Weverything -Wno-old-style-cast -Wno-c++98-compat-pedantic -Wno-c++98-c++11-compat-binary-literal -Wno-c11-extensions -Wno-padded)
 add_library(cheri_compressed_cap cheri_compressed_cap.c cheri_compressed_cap.h)
 
 add_executable(decompress_c128_cap decompress_c128_cap.c)
