--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ enable_testing()
 add_executable(simple_test test/simple_test.cpp)
 add_test(NAME simple-test COMMAND simple_test)
 
+add_executable(setbounds_test test/setbounds_test.cpp)
+add_test(NAME setbounds-test COMMAND setbounds_test)
+
 add_executable(simple_test_old_format test/simple_test.cpp)
 target_compile_definitions(simple_test_old_format PRIVATE -DCC128_OLD_FORMAT)
 add_test(NAME simple-test-old-format COMMAND simple_test_old_format)
