Encode IE=1 and E=0 for 23-bit format too
For setbounds we need to handle this case and cannot implicitly add 1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,10 @@ add_test(NAME simple-test COMMAND simple_test)
 add_executable(setbounds_test test/setbounds_test.cpp)
 add_test(NAME setbounds-test COMMAND setbounds_test)
 
+add_executable(setbounds_test_old_format test/setbounds_test.cpp)
+target_compile_definitions(setbounds_test_old_format PRIVATE -DCC128_OLD_FORMAT)
+add_test(NAME setbounds-test-old-format COMMAND setbounds_test_old_format)
+
 add_executable(simple_test_old_format test/simple_test.cpp)
 target_compile_definitions(simple_test_old_format PRIVATE -DCC128_OLD_FORMAT)
 add_test(NAME simple-test-old-format COMMAND simple_test_old_format)
