UBSAN for tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,6 @@ add_link_options(-fsanitize=undefined)
 add_compile_options(-pedantic -Wall -Wextra -Wno-old-style-cast -Wno-c++98-compat-pedantic -Wno-c++98-c++11-compat-binary-literal -Wno-c11-extensions -Wno-padded)
 # TODO: -Weverything
 add_library(cheri_compressed_cap14 cheri_compressed_cap.c cheri_compressed_cap.h)
-add_library(cheri_compressed_cap23 cheri_compressed_cap.c cheri_compressed_cap.h)
-target_compile_definitions(cheri_compressed_cap23 PRIVATE -DCC128_OLD_FORMAT)
-
-
 
 add_executable(decompress_c128_cap decompress_c128_cap.c)
 add_executable(decompress_c128_cap23 decompress_c128_cap.c)
@@ -25,10 +21,17 @@ install(TARGETS decompress_c128_cap14 RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR
 
 enable_testing()
 add_executable(simple_test test/simple_test.cpp)
+target_compile_options(simple_test PRIVATE -fsanitize=undefined,address)
+target_link_libraries(simple_test PRIVATE -fsanitize=undefined,address)
 add_test(NAME simple-test COMMAND simple_test)
 
 add_executable(setbounds_test test/setbounds_test.cpp)
+target_compile_options(setbounds_test PRIVATE -fsanitize=undefined,address)
+target_link_libraries(setbounds_test PRIVATE -fsanitize=undefined,address)
 add_test(NAME setbounds-test COMMAND setbounds_test)
 
+
 add_executable(random_inputs_test test/random_inputs_test.cpp)
+target_compile_options(random_inputs_test PRIVATE -fsanitize=undefined,address)
+target_link_libraries(random_inputs_test PRIVATE -fsanitize=undefined,address)
 add_test(NAME random-input-test COMMAND random_inputs_test)
