Add a fuzzer target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,9 @@ add_executable(random_inputs_test test/random_inputs_test.cpp)
 target_compile_options(random_inputs_test PRIVATE -fsanitize=undefined,address)
 target_link_libraries(random_inputs_test PRIVATE -fsanitize=undefined,address)
 add_test(NAME random-input-test COMMAND random_inputs_test)
+
+if (NOT APPLE)
+    add_executable(fuzz_decompress_asan test/fuzz-decompress.cpp)
+    target_compile_options(fuzz_decompress_asan PRIVATE -fsanitize=undefined,address,fuzzer)
+    target_link_libraries(fuzz_decompress_asan PRIVATE -fsanitize=undefined,address,fuzzer)
+endif()
