Fix invalid -fsanitize argument

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,7 +121,7 @@ if (HAVE_LIBFUZZER)
         target_link_libraries(fuzz_decompress_asan PRIVATE sail_wrapper128-fuzzer-asan-ubsan)
     endif()
     if (HAVE_MSAN)
-        add_sail_wrapper128("-fuzzer-msan-ubsan" "-fsanitize=undefined,address,fuzzer")
+        add_sail_wrapper128("-fuzzer-msan-ubsan" "-fsanitize=undefined,memory,fuzzer")
         add_executable(fuzz_decompress_msan test/fuzz-decompress.cpp)
         target_compile_options(fuzz_decompress_msan PRIVATE -fsanitize=undefined,memory,fuzzer)
         target_link_libraries(fuzz_decompress_msan PRIVATE -fsanitize=undefined,memory,fuzzer)
