Fix libfuzzer detection
The test file already has a main() symbol so we should use fuzzer-no-link.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,8 @@ set(CMAKE_REQUIRED_LIBRARIES -fsanitize=address)
 check_cxx_compiler_flag(-fsanitize=address HAVE_ASAN)
 set(CMAKE_REQUIRED_LIBRARIES -fsanitize=memory)
 check_cxx_compiler_flag(-fsanitize=memory HAVE_MSAN)
-set(CMAKE_REQUIRED_LIBRARIES -fsanitize=fuzzer)
-check_cxx_compiler_flag(-fsanitize=fuzzer HAVE_LIBFUZZER)
+set(CMAKE_REQUIRED_LIBRARIES -fsanitize=fuzzer-no-link)
+check_cxx_compiler_flag(-fsanitize=fuzzer-no-link HAVE_LIBFUZZER)
 
 if (HAVE_UBSAN)
     add_compile_options(-fsanitize=undefined)
