Lots of refactoring in preparation for 64-bit capability support
Unfortunately this library has to work with C code and not just C++, so
I have to make use of some rather ugly macro hacks to reuse the same
function implementation for 128/64-bit capabilities.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ if (HAVE_UBSAN)
     endif()
 endif()
 
+add_compile_options(-Wno-gnu-statement-expression)
+
 add_compile_options(-pedantic -Wall -Wextra -Wno-old-style-cast -Wno-c++98-compat-pedantic -Wno-c++98-c++11-compat-binary-literal -Wno-c11-extensions -Wno-padded)
 # TODO: -Weverything
 add_library(cheri_compressed_cap14 cheri_compressed_cap.c cheri_compressed_cap.h)
