--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,8 +62,8 @@ set_target_properties(GMP::GMP PROPERTIES
 )
 
 
-function(add_sail_wrapper128 _suffix _sanitizer_flags)
-    add_library(sail_wrapper128${_suffix} STATIC test/sail_wrapper.c test/sail.c)
+function(add_sail_wrapper _suffix _sanitizer_flags)
+    add_library(sail_wrapper128${_suffix} STATIC test/sail_wrapper_128.c test/sail.c)
     if (_sanitizer_flags)
         target_compile_options(sail_wrapper128${_suffix} PRIVATE "${_sanitizer_flags}")
         target_link_libraries(sail_wrapper128${_suffix} PRIVATE "${_sanitizer_flags}")
@@ -72,12 +72,12 @@ function(add_sail_wrapper128 _suffix _sanitizer_flags)
     target_compile_options(sail_wrapper128${_suffix} PRIVATE -Wno-unused-function -Wno-unused-parameter -Wno-sign-compare -Wno-unused-label -Wno-extra-semi -Wno-gnu-binary-literal)
 endfunction()
 
-add_sail_wrapper128("" "")
+add_sail_wrapper("" "")
 if (HAVE_ASAN)
-    add_sail_wrapper128("-asan-ubsan" "-fsanitize=undefined,address")
+    add_sail_wrapper("-asan-ubsan" "-fsanitize=undefined,address")
 endif()
 if (HAVE_MSAN)
-    add_sail_wrapper128("-msan-ubsan" "-fsanitize=undefined,memory")
+    add_sail_wrapper("-msan-ubsan" "-fsanitize=undefined,memory")
 endif()
 
 # Add a test exe for sail generated code
@@ -116,14 +116,14 @@ add_cc_test(random_inputs_test test/random_inputs_test.cpp)
 
 if (HAVE_LIBFUZZER)
     if (HAVE_ASAN)
-        add_sail_wrapper128("-fuzzer-asan-ubsan" "-fsanitize=undefined,address,fuzzer")
+        add_sail_wrapper("-fuzzer-asan-ubsan" "-fsanitize=undefined,address,fuzzer")
         add_executable(fuzz_decompress_asan test/fuzz-decompress.cpp)
         target_compile_options(fuzz_decompress_asan PRIVATE -fsanitize=undefined,address,fuzzer)
         target_link_libraries(fuzz_decompress_asan PRIVATE -fsanitize=undefined,address,fuzzer)
         target_link_libraries(fuzz_decompress_asan PRIVATE sail_wrapper128-fuzzer-asan-ubsan)
     endif()
     if (HAVE_MSAN)
-        add_sail_wrapper128("-fuzzer-msan-ubsan" "-fsanitize=undefined,memory,fuzzer")
+        add_sail_wrapper("-fuzzer-msan-ubsan" "-fsanitize=undefined,memory,fuzzer")
         add_executable(fuzz_decompress_msan test/fuzz-decompress.cpp)
         target_compile_options(fuzz_decompress_msan PRIVATE -fsanitize=undefined,memory,fuzzer)
         target_link_libraries(fuzz_decompress_msan PRIVATE -fsanitize=undefined,memory,fuzzer)
