--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,10 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: 'Run CMake with Ninja'
-      uses: lukka/run-cmake@v2
-      with:
-        buildDirectory: '${{ runner.workspace }}/build'
-        cmakeGenerator: 'Ninja'
+    - name: 'Run CMake and build'
+      run: |
+        mkdir -p build
+        cd build && cmake ..
+        make -j`nproc`
     - name: Run tests
-      run: ninja -C '${{ runner.workspace }}/build' test
+      run: make -C build test
