Move test format definitions for fuzzer sources to CMake
This avoids the need for multiple basically empty files that just have
two defines.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,14 @@ list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/extras)
 include(CTest)
 include(Catch)
 
+function(add_format_test_definions _target _format)
+    target_compile_definitions(${_target} PRIVATE "TEST_CC_FORMAT_LOWER=${_format}")
+    target_compile_definitions(${_target} PRIVATE "TEST_CC_FORMAT_UPPER=$<UPPER_CASE:${_format}>")
+    if (_format STREQUAL "128m")
+        target_compile_definitions(${_target} PRIVATE "TEST_CC_IS_MORELLO")
+    endif()
+endfunction()
+
 function(add_cc_test _format _target _suffix _sanitizer_flags)
     add_executable(${_target}_${_format}${_suffix} test/${_target}_${_format}.cpp)
     if (_sanitizer_flags)
@@ -201,14 +209,16 @@ function(add_fuzz_tests _format)
     if (HAVE_LIBFUZZER)
         if (HAVE_ASAN)
             add_sail_wrapper(${_format} "-fuzzer-asan-ubsan" "-fsanitize=undefined,address,fuzzer")
-            add_executable(fuzz_decompress_${_format}-asan test/fuzz_decompress_${_format}.cpp)
+            add_executable(fuzz_decompress_${_format}-asan test/fuzz_decompress.cpp)
+            add_format_test_definions(fuzz_decompress_${_format}-asan ${_format})
             target_compile_options(fuzz_decompress_${_format}-asan PRIVATE -fsanitize=undefined,address,fuzzer)
             target_link_libraries(fuzz_decompress_${_format}-asan PRIVATE -fsanitize=undefined,address,fuzzer)
             target_link_libraries(fuzz_decompress_${_format}-asan PRIVATE sail_wrapper_${_format}-fuzzer-asan-ubsan)
         endif()
         if (HAVE_MSAN)
             add_sail_wrapper(${_format} "-fuzzer-msan-ubsan" "-fsanitize=undefined,memory,fuzzer")
-            add_executable(fuzz_decompress_${_format}-msan test/fuzz_decompress_${_format}.cpp)
+            add_executable(fuzz_decompress_${_format}-msan test/fuzz_decompress.cpp)
+            add_format_test_definions(fuzz_decompress_${_format}-msan ${_format})
             target_compile_options(fuzz_decompress_${_format}-msan PRIVATE -fsanitize=undefined,memory,fuzzer)
             target_link_libraries(fuzz_decompress_${_format}-msan PRIVATE -fsanitize=undefined,memory,fuzzer)
             target_link_libraries(fuzz_decompress_${_format}-msan PRIVATE sail_wrapper_${_format}-fuzzer-msan-ubsan)
