Avoid UBSan signed-shift error in fast rep check
The compiler should still generate the same code for this shift but
writing it this way avoids the UBSan error.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,10 +182,10 @@ endfunction()
 function(add_cc_tests_target _format _target)
     add_cc_test(${_format} ${_target} "" "")
     if (HAVE_ASAN)
-        add_cc_test(${_format} ${_target} "-asan-ubsan" "-fsanitize=undefined,address")
+        add_cc_test(${_format} ${_target} "-asan-ubsan" "-fsanitize=undefined,address;-fno-sanitize-recover=undefined")
     endif()
     if (HAVE_MSAN)
-        add_cc_test(${_format} ${_target} "-msan-ubsan" "-fsanitize=undefined,memory")
+        add_cc_test(${_format} ${_target} "-msan-ubsan" "-fsanitize=undefined,memory;-fno-sanitize-recover=undefined")
     endif()
 endfunction()
 
@@ -208,19 +208,19 @@ add_cc_tests(256)
 function(add_fuzz_tests _format)
     if (HAVE_LIBFUZZER)
         if (HAVE_ASAN)
-            add_sail_wrapper(${_format} "-fuzzer-asan-ubsan" "-fsanitize=undefined,address,fuzzer")
+            add_sail_wrapper(${_format} "-fuzzer-asan-ubsan" "-fsanitize=undefined,address,fuzzer;-fno-sanitize-recover=undefined")
             add_executable(fuzz_decompress_${_format}-asan test/fuzz_decompress.cpp)
             add_format_test_definions(fuzz_decompress_${_format}-asan ${_format})
-            target_compile_options(fuzz_decompress_${_format}-asan PRIVATE -fsanitize=undefined,address,fuzzer)
-            target_link_libraries(fuzz_decompress_${_format}-asan PRIVATE -fsanitize=undefined,address,fuzzer)
+            target_compile_options(fuzz_decompress_${_format}-asan PRIVATE -fsanitize=undefined,address,fuzzer -fno-sanitize-recover=undefined)
+            target_link_libraries(fuzz_decompress_${_format}-asan PRIVATE -fsanitize=undefined,address,fuzzer -fno-sanitize-recover=undefined)
             target_link_libraries(fuzz_decompress_${_format}-asan PRIVATE sail_wrapper_${_format}-fuzzer-asan-ubsan)
         endif()
         if (HAVE_MSAN)
             add_sail_wrapper(${_format} "-fuzzer-msan-ubsan" "-fsanitize=undefined,memory,fuzzer")
             add_executable(fuzz_decompress_${_format}-msan test/fuzz_decompress.cpp)
             add_format_test_definions(fuzz_decompress_${_format}-msan ${_format})
-            target_compile_options(fuzz_decompress_${_format}-msan PRIVATE -fsanitize=undefined,memory,fuzzer)
-            target_link_libraries(fuzz_decompress_${_format}-msan PRIVATE -fsanitize=undefined,memory,fuzzer)
+            target_compile_options(fuzz_decompress_${_format}-msan PRIVATE -fsanitize=undefined,memory,fuzzer -fno-sanitize-recover=undefined)
+            target_link_libraries(fuzz_decompress_${_format}-msan PRIVATE -fsanitize=undefined,memory,fuzzer -fno-sanitize-recover=undefined)
             target_link_libraries(fuzz_decompress_${_format}-msan PRIVATE sail_wrapper_${_format}-fuzzer-msan-ubsan)
         endif()
     endif()
