GitHub Actions: Test Debug and Release builds

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,9 +8,10 @@ on:
 
 jobs:
   build:
-
+    strategy:
+      matrix:
+        build_type: [Debug, Release]
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Ensure pre-commit checks pass
@@ -18,7 +19,7 @@ jobs:
     - name: 'Run CMake and build'
       run: |
         mkdir -p build
-        cd build && cmake ..
+        cd build && cmake -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} ..
         make -j`nproc`
     - name: Run tests
       run: cd build && ctest -V -j`nproc`
