--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -3,9 +3,8 @@ on: [pull_request]
 jobs:
   check-format:
     runs-on: ubuntu-latest
-    env:
-      EVENT_JSON: ${{ toJSON(github.event.pull_request) }}
     steps:
+      - uses: actions/checkout@v3
       - name: Check formatting
         uses: wolletd/clang-format-checker@v1
         with:
