Add a new cc128r version of the library for the new RISC-V format
Currently this only supports the 64-bit version but a 32-bit one will be
added in the future.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,7 @@ endfunction()
 add_sail_wrappers(64)
 add_sail_wrappers(128)
 add_sail_wrappers(128m)
+add_sail_wrappers(128r)
 
 
 function(add_decompress_cap _format)
@@ -144,6 +145,7 @@ endfunction()
 add_decompress_cap(64)
 add_decompress_cap(128)
 add_decompress_cap(128m)
+add_decompress_cap(128r)
 
 enable_testing()
 
@@ -192,7 +194,7 @@ endfunction()
 
 function(add_cc_tests _format)
     add_cc_tests_target(${_format} simple_test)
-    if (NOT _format STREQUAL "256")
+    if (NOT _format STREQUAL "256" AND NOT _format STREQUAL "128r")
         add_cc_tests_target(${_format} setbounds_test)
         add_cc_tests_target(${_format} random_inputs_test)
     endif()
@@ -201,6 +203,7 @@ endfunction()
 add_cc_tests(64)
 add_cc_tests(128)
 add_cc_tests(128m)
+add_cc_tests(128r)
 add_cc_tests(256)
 
 function(add_fuzz_tests _format)
@@ -228,3 +231,4 @@ endfunction()
 add_fuzz_tests(64)
 add_fuzz_tests(128)
 add_fuzz_tests(128m)
+add_fuzz_tests(128r)
