Set TEST_CC_FORMAT_ macros in CMake instead of .cpp files
This avoids lots of unnecessary repetition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,11 +165,14 @@ function(add_format_test_definions _target _format)
     target_compile_definitions(${_target} PRIVATE "TEST_CC_FORMAT_UPPER=$<UPPER_CASE:${_format}>")
     if (_format STREQUAL "128m")
         target_compile_definitions(${_target} PRIVATE "TEST_CC_IS_MORELLO")
+    elseif (_format STREQUAL "256")
+        target_compile_definitions(${_target} PRIVATE "TEST_CC_IS_CHERI256")
     endif()
 endfunction()
 
 function(add_cc_test _format _target _suffix _sanitizer_flags)
     add_executable(${_target}_${_format}${_suffix} test/${_target}_${_format}.cpp)
+    add_format_test_definions(${_target}_${_format}${_suffix} ${_format})
     if (_sanitizer_flags)
         target_compile_options(${_target}_${_format}${_suffix} PRIVATE "${_sanitizer_flags}")
         target_link_libraries(${_target}_${_format}${_suffix} PRIVATE "${_sanitizer_flags}")
