Add the simple test for the 64r format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,6 +149,7 @@ function(add_decompress_cap _format)
 endfunction()
 
 add_decompress_cap(64)
+add_decompress_cap(64r)
 add_decompress_cap(128)
 add_decompress_cap(128m)
 add_decompress_cap(128r)
@@ -203,13 +204,14 @@ endfunction()
 
 function(add_cc_tests _format)
     add_cc_tests_target(${_format} simple_test)
-    if (NOT _format STREQUAL "256")
+    if (NOT _format STREQUAL "256" AND NOT _format STREQUAL "64r")
         add_cc_tests_target(${_format} setbounds_test)
         add_cc_tests_target(${_format} random_inputs_test)
     endif()
 endfunction()
 
 add_cc_tests(64)
+add_cc_tests(64r)
 add_cc_tests(128)
 add_cc_tests(128m)
 add_cc_tests(128r)
@@ -238,6 +240,7 @@ function(add_fuzz_tests _format)
 endfunction()
 
 add_fuzz_tests(64)
+add_fuzz_tests(64r)
 add_fuzz_tests(128)
 add_fuzz_tests(128m)
 add_fuzz_tests(128r)
