--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,7 +204,7 @@ endfunction()
 
 function(add_cc_tests _format)
     add_cc_tests_target(${_format} simple_test)
-    if (NOT _format STREQUAL "256" AND NOT _format STREQUAL "64r")
+    if (NOT _format STREQUAL "256")
         add_cc_tests_target(${_format} setbounds_test)
         add_cc_tests_target(${_format} random_inputs_test)
     endif()
